atualizando view da lista de artigos do admin e subadmin, e artigos deletados do admin

--- a/public/css/dashboardList.css
+++ b/public/css/dashboardList.css
@@ -67,6 +67,14 @@ table{
     color: #fff;
     background-color: #3390efbd;
 }
+
+.article__thumb__content {
+    height: 5rem;
+}
+
+.article__thumb__content img {
+    height: 5rem;
+}
 /* MOBILE
 @media only screen and (max-width: 1024px){
     table, thead, tbody, th, td, tr{
