--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -17,5 +17,6 @@
     <link rel="stylesheet" href="/css/articlePage.css">
     <link rel="stylesheet" href="/css/userProfile.css">
     <link rel="stylesheet" href="/css/articleCategory.css">
+    <link rel="stylesheet" href="/css/auth.css">
     <title>main</title>
 </head>
