--- a/views/resetPassword.ejs
+++ b/views/resetPassword.ejs
@@ -4,7 +4,7 @@
 <body>
    
     <main class="content">
-        <div class="form__container">
+        <div class="form__content__main">
 
             <div class="form__header">
                 <h1 class="text__heading">Redefina sua nova senha</h2>
@@ -12,7 +12,7 @@
                     
             <form class="form__login" action="/signup" method="post"><!--content__field__text//content__button__submit//content__footer__text-->
                 <input class="text__field" type="password" name="pw" id="pw" placeholder="Nova senha" minlength="5" maxlength="150" required>
-                <input class="text__field" type="password" name="pw-c" id="pw-c" placeholder="Confirme senha" minlength="5" maxlength="150" required>
+                <input class="text__field" type="password" name="pw-c" id="pw-c" placeholder="Confirme a nova senha" minlength="5" maxlength="150" required>
                 <input class="button_login" type="submit" value="Redefinir senha">
             </form>
 
