--- a/views/articleOne.ejs
+++ b/views/articleOne.ejs
@@ -7,7 +7,7 @@
     <main class="content">
 
 
-        <div class="article__content">
+        <div class="article__content__main">
 
             <div class="article__section__header">
 
