--- a/views/forgotPassword.ejs
+++ b/views/forgotPassword.ejs
@@ -4,7 +4,7 @@
 <body>
    
     <main class="content">
-        <div class="form__container">
+        <div class="form__content__main">
 
             <div class="form__header">
                 <h1 class="text__heading">Esqueceu senha? digite seu email</h2>
