--- a/views/usersList.ejs
+++ b/views/usersList.ejs
@@ -30,7 +30,21 @@
                                 <tbody>
                                     <tr>
                                         <td><%= user.id %></td> 
-                                        <td><img class="img-users" src="/assets/male-user-shadow-svgrepo-com.svg" alt=""></td>
+                                        <td>
+                                            <%if(user.img_file === null){%>
+
+                                                <div class="user__thumb__content">
+                                                    <img src="/assets/male-user-shadow-svgrepo-com.svg" alt="">                                                    
+                                                </div>
+                                            
+                                            <%}else{%>
+
+                                                <div class="user__thumb__content">
+                                                    <img src="<%= user.img_file %>">                                                    
+                                                </div>
+                                                
+                                            <%}%>
+                                        </td>
                                         <td><%= user.name %></td>
                                         <td><%= user.email %></td>
         
