corrigindo bug na view de listagem no botao no more

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -44,6 +44,7 @@
 /* Style the tab content */
 .admin__content {
     margin-left: 1rem;
+    min-height: 75vh;
     width: 75%;
     border: 1px solid #ddd;
 }
