--- a/views/dashboardAlt.ejs
+++ b/views/dashboardAlt.ejs
@@ -34,7 +34,7 @@
                         </div>
                     </div>
                     
-                    <h2>Para criar artigo siga os passos</h2>
+                    <h2>Para criar artigo siga os passos subadmin</h2>
                 </div>
             </div>
 
