--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -34,7 +34,7 @@
                         </div>
                     </div>
 
-                    <h2>Para criar artigo siga os passos</h2>
+                    <h2>Para criar artigo siga os passos admin</h2>
                 </div>
             </div>
 
