adcionando na view de dashboard admin/subadmin seção de orientações

--- a/views/partials/navbarAdmin.ejs
+++ b/views/partials/navbarAdmin.ejs
@@ -1,7 +1,9 @@
 <div class="tab">
 
+    <h2>ORIENTAÇÕES</h2>
+    <button class="tablinks"><a href="/subadmin/dashboard">Enviar experiência</a></button>
+
     <h2>ARTIGOS</h2>
-    <button class="tablinks"><a href="/admin/dashboard">Orientações</a></button>
     <button class="tablinks"><a href="/admin/dashboard/new/article">Criar artigo</a></button>
     <button class="tablinks"><a href="/admin/dashboard/articles/1">Lista de artigos</a></button>
     <button class="tablinks"><a href="/admin/dashboard/articles/deleted/1">Lista de artigos deletados</a></button>
