--- a/views/partials/navbarAdmin.ejs
+++ b/views/partials/navbarAdmin.ejs
@@ -1,7 +1,7 @@
 <div class="tab">
 
     <h2>ORIENTAÇÕES</h2>
-    <button class="tablinks"><a href="/subadmin/dashboard">Enviar experiência</a></button>
+    <button class="tablinks"><a href="/admin/dashboard">Enviar experiência</a></button>
 
     <h2>ARTIGOS</h2>
     <button class="tablinks"><a href="/admin/dashboard/new/article">Criar artigo</a></button>
