--- a/public/css/partials/header.css
+++ b/public/css/partials/header.css
@@ -109,7 +109,7 @@ img#menu__burguer {
   display: none;
   position: absolute;
   background-color: #f9f9f9;
-  width: 100%;
+  width: 29rem;  
   top: 3rem;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
