--- a/views/myProfile.ejs
+++ b/views/myProfile.ejs
@@ -34,8 +34,11 @@
                             </div>    
                         </figure>
     
-                        <input type="file" name="file" minlength="1" maxlength="300">
-                        <input class="button_update" type="submit" value="Trocar de foto" >            
+                        <div class="myprofile__item">
+                            <input class="file" type="file" name="file" minlength="1" maxlength="300" >
+                            <input class="button_update" type="submit" value="Trocar de foto" >         
+                        </div>
+           
                     </form>
                 </div>
 
