--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,15 +14,45 @@
                 <div class="menu__section__right">
                     <ul>
                         <%if(!isAuthenticated){%>
-                            <li><button onclick="open_modal()">Entrar</button></li>
+                            <li><button class="button__header" onclick="open_modal()">Entrar</button></li>
+                            
+                            <div class="topnav-2">
+                                <!-- Navigation links (hidden by default) -->
+                
+                                <%if(isAuthenticated){%>
+                                <div id="myLinks-2">
+                                        <li><a href="/myprofile">Perfil</a></li>
+                                        <li><a href="/logout">Sair
+                                                <img src="/assets/signout_106525.svg" alt="">
+                                                </a>
+                                        </li>
+                                </div>
+                                <%}%>
+                
+                            </div>
                         <%}else{%>
-                            <li><button onclick="myFunction2()">Opções</button></li>
+                            <li><button class="button__header" onclick="myFunction2()">Opções</button></li>
+
+                            <div class="topnav-2">
+                                <!-- Navigation links (hidden by default) -->
+                
+                                <%if(isAuthenticated){%>
+                                <div id="myLinks-2">
+                                        <li><a href="/myprofile">Perfil</a></li>
+                                        <li><a href="/logout">Sair
+                                                <img src="/assets/signout_106525.svg" alt="">
+                                                </a>
+                                        </li>
+                                </div>
+                                <%}%>
+                
+                            </div>
                         <%}%>
                     </ul>
                 </div>
 
 
-                <!-- The Modal login -->
+            <!-- The Modal login -->
             <div id="id01" class="modal">
                 <!-- Modal Content -->
                 <div class="modal-content animate ">
@@ -49,30 +79,11 @@
             
             <!--menu mobile-->
             <div class="topnav">
-            <!-- Navigation links (hidden by default) -->
-            <div id="myLinks">
-                <a href="#news">Experiências</a>
-                <a href="#contact">Sobre</a>
-                <a href="#about">Contato</a>
-            </div>
-            </div>
-
-            <!--menu perfil-->
-            <div class="topnav-2">
-                <!-- Navigation links (hidden by default) -->
-
-                <%if(isAuthenticated){%>
-                <div id="myLinks-2">
-                        <li><a href="/myprofile">Perfil</a></li>
-                        <li><a href="/logout">Sair
-                                <img src="/assets/signout_106525.svg" alt="">
-                                </a>
-                        </li>
+                <div id="myLinks">
+                    <a href="/">Inicio</a>
                 </div>
-                <%}%>
-
             </div>
-            
+
             <script src="/js/script.js"></script>
 
 
