--- a/public/css/articleCategory.css
+++ b/public/css/articleCategory.css
@@ -15,3 +15,19 @@
 .ac__content__body {
     margin: 3rem 2rem;
 }
+
+@media (max-width: 763px) {
+
+    .ac__content__header {
+        margin: 0rem;
+    }
+
+    .ac__content__body {
+        margin: 0rem;
+    }
+
+    .articleCategory__content__section {
+        padding: 0rem; 
+    }
+
+}
