--- a/public/css/articleOne.css
+++ b/public/css/articleOne.css
@@ -153,3 +153,20 @@
     background-color: #f1f1f1;
   }
 
+  @media (max-width: 763px) {
+
+    .article__section__header {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+
+    .article__section__body {
+      padding: 0rem; 
+  }
+
+  .body__content__item {
+    padding: 0.5rem;
+  }
+
+}
+
