--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,7 +2,7 @@
 
         <div class="content__header__content">
 
-            <div class="content__header__section"><!--Falta alinhar os links-->
+            <div class="content__header__section">
                 <div class="menu__section__left">
                     <ul>
                         <li><img  class="menu__icon" src="/assets/burger-icon.svg" alt="Burger" onclick="myFunction()"></li>
@@ -51,47 +51,15 @@
                     </ul>
                 </div>
 
+                <%- include("__modalLogin") %>
 
-            <!-- The Modal login -->
-            <div id="id01" class="modal">
-                <!-- Modal Content -->
-                <div class="modal-content animate ">
-                    <div class="form__container">
+                <%- include("__menuMobile_1") %>
 
-                        <div class="form__header">
-                            <h1 class="text__heading">Entrar</h2>
-                        </div>
-                                
-                        <form class="form__login" action="/login" method="post"><!--content__field__text//content__button__submit//content__footer__text-->
-                            <input class="text__field" type="email" name="email" id="email" placeholder="Email" minlength="5" maxlength="150" required>
-                            <input class="text__field" type="password" name="password" id="password" placeholder="Senha" minlength="5" maxlength="30" required> 
-                            <input class="button_login" type="submit" value="Entrar">
-                        </form>
-
-                        <div class="alternative__options" style="background-color:#f1f1f1">
-                            <a class="text__forgot" href="/forgot-password">Esqueceu senha?</a>
-                            <h2 class="text__footer">Não tem?<a href="/register">Registre-se</a></h3>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-            
-            <!--menu mobile-->
-            <div class="topnav">
-                <div id="myLinks">
-                    <a href="/">Inicio</a>
-                </div>
-            </div>
-
-            <script src="/js/script.js"></script>
-
+                <%- include("__scriptHeader") %>
 
             </div>
         
         </div>
-
-
 
     </header>
 
