--- a/public/css/partials/navbarDash.css
+++ b/public/css/partials/navbarDash.css
@@ -47,3 +47,15 @@
   .tab button.active {
     background-color: #3390ef;
   }
+
+
+  @media (max-width: 763px) {
+    .tab {
+      display: none;
+    }
+
+    .admin__content {
+      width: 100%;
+      margin: 0;
+    }
+  }
