--- a/views/articlePage.ejs
+++ b/views/articlePage.ejs
@@ -43,9 +43,7 @@
        
     </main>
     
-    <script src="https://unpkg.com/@webcreate/infinite-ajax-scroll/dist/infinite-ajax-scroll.min.js"></script>
-
-    <script src="/js/infinitescroll2.js" ></script>
+    <%- include("partials/__scriptInfintScroll_ilimited") %>
 
     <%- include("partials/footer.ejs") %>
 
