--- a/views/articlesEditSubadmin.ejs
+++ b/views/articlesEditSubadmin.ejs
@@ -2,7 +2,7 @@
 
 
 <body>
-    <%- include("partials/header.ejs") %>
+    <%- include("partials/headerDashSubAdmin.ejs") %>
 
     <main class="content">
 
