--- a/views/articlesListSubadmin.ejs
+++ b/views/articlesListSubadmin.ejs
@@ -2,7 +2,7 @@
 
 
 <body>
-    <%- include("partials/header.ejs") %>
+    <%- include("partials/headerDashSubAdmin.ejs") %>
 
     <main class="content">
 
@@ -49,9 +49,8 @@
                             <% }) %>
                         
                         </table>
-                            <button class="load-more">Carregar mais</button>
-                            <div class="no-more">Sem mais artigos :(</div>
-        
+                        <button class="load-more">Carregar mais</button>
+                        <div class="no-more">Sem mais artigos :(</div>
         
                 </div>
             </div>
