--- a/views/dashboardAlt.ejs
+++ b/views/dashboardAlt.ejs
@@ -1,7 +1,7 @@
 <%- include("partials/head.ejs") %>
 
 <body>
-    <%- include("partials/header.ejs") %>
+    <%- include("partials/headerDashSubAdmin.ejs") %>
     <main class="content">
 
         <div class="dashboard__content__main">
