--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,31 +16,8 @@
             <div class="content__home__body">
                 <h2>Ultimas experiências adicionadas:</h1>
                 
-                <div class="wrapper">
-                        <% articles.forEach(article => { %>
-            
-                                    <div class="block">     
-                                        <div class="block-img">
-                                            <img src="/assets/img-test/copos-coloridos.jpg" alt="HTML5">
-                                        </div>
-                                        <div class="block-desc">
-                                            <h3><%= article.title %></h3>
-                                            <p><%= article.description_home  %></p>
-                                        </div>
-                                        <div class="block-link">
-                                            <a href="/article/<%= article.slug %>">Ver mais</a>
-                                        </div>
-                                    </div>
-            
-                                    <div class="pagination">
-                                        <a href="/articles/page/<%= count_articles %>" class="next">Next</a>
-                                    </div>
-            
-                        <% }) %>
-                        <button class="load-more">Carregar mais</button>
-                        <div class="no-more">Sem mais artigos :(</div>
-            
-                </div>
+                <%- include("partials/__blockListArticle") %>
+                
             </div>
 
             <div class="content__home__footer">
@@ -51,9 +28,9 @@
         </div>
    
     </main>
+
+    <%- include("partials/__scriptInfinitScroll_limited") %>
     
-    <script src="https://unpkg.com/@webcreate/infinite-ajax-scroll/dist/infinite-ajax-scroll.min.js"></script>
-    <script src="/js/infinitescroll.js" ></script>
     <%- include("partials/footer.ejs") %>
 
 </body>
