--- a/views/usersList.ejs
+++ b/views/usersList.ejs
@@ -2,7 +2,7 @@
 
 
 <body>
-    <%- include("partials/header.ejs") %>
+    <%- include("partials/headerDashAdmin.ejs") %>
 
     <main class="content">
 
