--- a/public/css/partials/navbarDash.css
+++ b/public/css/partials/navbarDash.css
@@ -1,7 +1,7 @@
 /* Style the tab */
 .tab {
        border: 1px solid #ccc;
-       width: 25%;
+       width: 22rem;
        height: fit-content;
        box-shadow: rgb(75 75 75 / 25%) 0px 0.0625rem 0.025rem 0px, rgb(75 75 75 / 15%) 0px 0.0625rem 0.1875rem;
   }
