--- a/views/category2One.ejs
+++ b/views/category2One.ejs
@@ -17,6 +17,7 @@
                 <div class="wrapper">
 
                     <% articles.forEach(article => { %>
+
                         <div class="block">
                            
                             <div class="block-img">
@@ -34,6 +35,7 @@
                         <div class="pagination">
                             <a href="/category2/<%= slug %>/<%= count_articles %>" class="next">Next</a>
                         </div>
+                        
                     <% }) %>
             
                     <button class="load-more">Carregar mais</button>
@@ -49,10 +51,7 @@
        
     </main>
 
-    <script src="https://unpkg.com/@webcreate/infinite-ajax-scroll/dist/infinite-ajax-scroll.min.js"></script>
-
-    <script src="/js/infinitescroll2.js" ></script>
-    
+    <%- include("partials/__scriptInfinitScroll_ilimited") %>
 
     <%- include("partials/footer.ejs") %>
 
