--- a/views/categoryOne.ejs
+++ b/views/categoryOne.ejs
@@ -14,7 +14,36 @@
 
             <div class="ac__content__body">
 
-                <%- include("partials/__blockListArticle") %>
+                <div class="wrapper">
+
+                    <% articles.forEach(article => { %>
+
+                        <div class="block">
+                           
+                            <div class="block-img">
+                                <img src="/assets/img-test/copos-coloridos.jpg" alt="HTML5">
+                            </div>
+                            <div class="block-desc">
+                                <h2><%= article.title %></h2>
+                                <p><%= article.description_home  %></p>
+                            </div>
+                            <div class="block-link">
+                                <a href="/article/<%= article.slug %>">Ver mais</a>
+                            </div>
+                        </div>
+            
+                        <div class="pagination">
+                            <a href="/category/<%= slug %>/<%= count_articles %>" class="next">Next</a>
+                        </div>
+                        
+                    <% }) %>
+            
+                    <button class="load-more">Carregar mais</button>
+                    <div class="no-more">Sem mais artigos :(</div>
+            
+                                
+                    <!--Termina Itens-->
+                </div>
 
             </div>
 
@@ -22,7 +51,7 @@
        
     </main>
 
-    <%- include("partials/__scriptInfintScroll_ilimited") %>
+    <%- include("partials/__scriptInfinitScroll_ilimited") %>
 
     <%- include("partials/footer.ejs") %>
 
