--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,31 @@
             <div class="content__home__body">
                 <h2>Ultimas experiências adicionadas:</h1>
                 
-                <%- include("partials/__blockListArticle") %>
+                    <div class="wrapper">
+                        <% articles.forEach(article => { %>
+                    
+                                    <div class="block">     
+                                        <div class="block-img">
+                                            <img src="/assets/img-test/copos-coloridos.jpg" alt="HTML5">
+                                        </div>
+                                        <div class="block-desc">
+                                            <h3><%= article.title %></h3>
+                                            <p><%= article.description_home  %></p>
+                                        </div>
+                                        <div class="block-link">
+                                            <a href="/article/<%= article.slug %>">Ver mais</a>
+                                        </div>
+                                    </div>
+                    
+                                    <div class="pagination">
+                                        <a href="/articles/page/<%= count_articles %>" class="next">Next</a>
+                                    </div>
+                    
+                        <% }) %>
+                        <button class="load-more">Carregar mais</button>
+                        <div class="no-more">Sem mais artigos :(</div>
+                    
+                    </div>
                 
             </div>
 
