--- a/views/userProfile.ejs
+++ b/views/userProfile.ejs
@@ -2,7 +2,7 @@
 
 
 <body>
-    <%- include("partials/header.ejs") %>
+    <%- include("partials/headerWithoutCategories.ejs") %>
 
     <main class="content">
 
