--- a/public/css/partials/header.css
+++ b/public/css/partials/header.css
@@ -30,7 +30,7 @@ img#menu__burguer {
 }
 
 .menu__section__left a, .dropdown .dropbtn, .dropdown__mobile .dropbtn {
-  padding: 1rem;
+  padding: 0rem 1rem;  
   font-size: 2rem;
 }
 
@@ -41,6 +41,46 @@ img#menu__burguer {
 
 .button__header {
   margin-right: 1rem;
+  color: #ffffff;
+  padding: 0.8rem;
+  background: var(--color-header-button);
+  border-radius: 2rem;
+  border-style: none;
+  outline: none;
+}
+
+.button__header:hover {
+  cursor: pointer;
+  background: var(--color-header-button-hover);
+}
+
+.seta-baixo {
+  margin-left: 0.3rem;
+  content: "";
+  display: inline-block;
+  vertical-align: middle;
+  margin-right: 10px;
+  width: 0; 
+  height: 0; 
+
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-bottom: none;
+  border-top: 5px solid white;
+}
+
+.seta-baixo-2 {
+  content: "";
+  display: inline-block;
+  vertical-align: middle;
+  margin-left: 0.7rem;
+  width: 0; 
+  height: 0; 
+
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-bottom: none;
+  border-top: 5px solid black;
 }
 
 .dropdown .dropbtn , .dropdown__mobile .dropbtn{
@@ -60,6 +100,7 @@ img#menu__burguer {
     color: Black;
     text-decoration: none;
     background: inherit;
+    outline: none;
 }
 
 .content__header__section a:hover{
@@ -99,9 +140,18 @@ img#menu__burguer {
 }
 
 /* Add a red background color to navbar links on hover */
+.navbar a, .dropdown .dropbtn, .dropdown__mobile .dropbtn {
+  padding: 1rem;
+}
+
 .navbar a:hover, .dropdown:hover .dropbtn, .dropdown__mobile:hover .dropbtn {
-  background-color: red;
-  width: 13rem;
+  color: var(--color-dropdown-header);
+}
+
+/*setas*/
+.dropdown:hover .dropbtn .seta-baixo-2 {
+  border-bottom: 5px solid black;
+  border-top: none;
 }
 
 /* Dropdown content (hidden by default) */
@@ -109,8 +159,8 @@ img#menu__burguer {
   display: none;
   position: absolute;
   background-color: #f9f9f9;
-  width: 29rem;  
-  top: 3rem;
+  width: 36rem;  
+  top: 4rem;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
@@ -127,9 +177,14 @@ img#menu__burguer {
 
 /* Mega Menu header, if needed */
 .dropdown-content .header {
-  background: red;
+  background: var(--color-dropdown-header);
   padding: 16px;
   color: white;
+}
+
+.dropdown-content .header h2 {
+  font-size: var(--font-size-menu-title-desktop);
+  text-align: center;
 }
 
 .dropdown-content__mobile .header {
@@ -137,6 +192,7 @@ img#menu__burguer {
   color: white;
   width: 100%;
 }
+
 
 .dropdown-content__mobile .row {
   width: 100%;
@@ -154,7 +210,7 @@ img#menu__burguer {
 /* Create three equal columns that floats next to each other */
 .column {
   padding: 10px;
-  background-color: #ccc;
+  background-color: var(--color-dropdown-options);
 }
 
 /* Style links inside the columns */
@@ -165,11 +221,18 @@ img#menu__burguer {
   text-decoration: none;
   display: block;
   text-align: left;
+  border-radius: 0.6rem;
+  font-size: var(--font-size-menu-options-desktop);
 }
 
 /* Add a background color on hover */
 .column a:hover {
-  background-color: #ddd;
+  background-color: var(--color-dropdown-options-hover);
+  color: white;
+  -webkit-transition: all 0.2s linear;
+  -moz-transition: all 0.2s linear;
+  -o-transition: all 0.2s linear;
+  transition: all 0.2s linear;
 }
 
 /* Clear floats after the columns */
@@ -379,10 +442,11 @@ img#menu__burguer {
   /*----------//--------------CONFIGURAÇÕES DO MODAL DE PERFIL------------------//------------*/ 
   /* Style the navigation menu */
 .topnav-2 {
-  background-color: #333;
+    background-color: var(--color-box-options-background);
+    box-shadow: var(--shadow--box-options);
     position: absolute;
     right: 0rem;
-    top: 3.4rem;    
+    top: 3.6rem;    
     width: 11rem;
   }
   
@@ -390,16 +454,17 @@ img#menu__burguer {
   .topnav-2 #myLinks-2 {
     display: none;
     flex-direction: column;
-    align-items: center;
   }
   
   /* Style navigation menu links */
   .topnav-2 a {
-    color: white;
     padding: 14px 16px;
     text-decoration: none;
+    text-align: center;
     font-size: 17px;
     display: block;
+    color: white;
+    border-bottom: 1px solid white;
   }
   
   /* Style the hamburger menu */
@@ -413,8 +478,12 @@ img#menu__burguer {
   
   /* Add a grey background color on mouse-over */
   .topnav-2 a:hover {
-    background-color: #ddd;
-    color: black;
+    background-color: var(--color-dropdown-options-hover);
+    color: white;
+    -webkit-transition: all 0.2s linear;
+    -moz-transition: all 0.2s linear;
+    -o-transition: all 0.2s linear;
+    transition: all 0.2s linear;
   }
   
   /* Style the active link (or home/logo) */
